refactor(common): 替换 Collections.singletonList 为 List.of 并更新 instanceof 模式匹配
- 将多个类中的 Collections.singletonList 替换为 List.of 以使用更现代的 Java 语法
- 在 ExtendAuthenticationConverter 中使用 instanceof 模式变量替换传统类型检查
- 在 DefaultMetaObjectHandler 中使用 instanceof 模式匹配简化类型转换逻辑
- 移除不再使用的 Collections 导入语句
- 统一使用 List.of 创建不可变列表以提高代码简洁性
- 优化 OAuth2 访问令牌生成器中的受众声明构建方式