@@ -15,7 +15,7 @@ import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
 
 import java.time.Instant;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
@@ -63,7 +63,7 @@ public class CustomizeClientOAuth2AccessTokenGenerator implements OAuth2TokenGen
         }
         claimsBuilder
                 .subject(context.getPrincipal().getName())
-                .audience(Collections.singletonList(registeredClient.getClientId()))
+                .audience(List.of(registeredClient.getClientId()))
                 .issuedAt(issuedAt)
                 .expiresAt(expiresAt)
                 .notBefore(issuedAt)
